--- a/css/style.css
+++ b/css/style.css
@@ -33,13 +33,48 @@ main {
     padding-bottom: 10px;
     padding-left: 20px;
 }
-.add{
+
+.add {
     display: inline-block;
     border-radius: 5px;
     border: 1px solid grey;
     padding: 5px 5px;
 }
 
-.add-task{
+.add-task {
     background-color: lightskyblue;
+}
+
+.line{
+    margin-top: 5px;
+    margin-bottom: 20px;
+}
+
+.check {
+    color: lightgreen;
+    border-radius: 50%;
+    border: 1px solid lightgreen;
+    font-size: 10px;
+    width: 20px;
+    height: 20px;
+    text-align: center;
+    line-height: 18px;
+}
+
+.check, .tag{
+    display: inline-block;
+}
+
+.line span{
+    margin-left: 10px;
+}
+
+.tag{
+    background-color: lightblue;
+    border-radius: 10px;
+    text-align: center;
+    font-size: xx-small;
+    padding: 2px 10px;
+    line-height: 15px;
+
 }
