--- a/css/style.css
+++ b/css/style.css
@@ -25,6 +25,7 @@ main {
     width: 60%;
     margin: auto;
     margin-top: 20px;
+    margin-bottom: 20%;
     border-radius: 5px;
 }
 
@@ -48,6 +49,7 @@ main {
 .line{
     margin-top: 5px;
     margin-bottom: 20px;
+    font-size: small;
 }
 
 .check {
@@ -59,6 +61,11 @@ main {
     height: 20px;
     text-align: center;
     line-height: 18px;
+}
+
+.check.cross{
+    border-color: red;
+    color: red;
 }
 
 .check, .tag{
@@ -76,5 +83,20 @@ main {
     font-size: xx-small;
     padding: 2px 10px;
     line-height: 15px;
+}
 
+.q1-goals{
+    background-color: purple;
+}
+
+.recruiting{
+    background-color: green;
+}
+
+.mobile{
+    background-color: orange;
+}
+
+.website{
+    background-color:magenta;
 }
