--- a/css/style.css
+++ b/css/style.css
@@ -35,6 +35,10 @@ main {
     padding-left: 20px;
 }
 
+.title{
+    font-weight: bold;
+}
+
 .add {
     display: inline-block;
     border-radius: 5px;
@@ -48,7 +52,7 @@ main {
 
 .line{
     margin-top: 5px;
-    margin-bottom: 20px;
+    margin-bottom: 10px;
     font-size: small;
 }
 
